--- a/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/default/page-default.css
+++ b/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/default/page-default.css
@@ -23,13 +23,29 @@ html, body {
 }
 
 #xo-banner {
+	position:		relative;
 	height:			60px;
 	border:			1px solid #000000;
 	padding:		2px;
 	background:		#2A75C5 url(img/canvas-banner_bg.png) repeat-x left top;
 }
 
+#xo-banner-ad {
+	position:		absolute;
+	top:			2px;
+	left:			0px;
+	width:			100%;
+	text-align:		center;
+}
+
+#xo-banner-ad object, #xo-banner-ad img {
+	display:		block;
+	text-align:		left;
+	margin:			0px auto;
+}
+
 #xo-canvas-main {
+	clear:			both;
 	border-top:		1px solid #FFFFFF;
 	padding:		6px;
 }
