Fixed a prob with the margin rules

--- a/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/xoops-devteam/page-default.css
+++ b/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/xoops-devteam/page-default.css
@@ -11,4 +11,17 @@
 	background-image:		url(img/canvas-rightcolumn_bg.png);
 }
 
+#xo-canvas-leftcolumn + #xo-page {
+	margin-left:	0px;
+	margin-right:	176px;
+}
+#xo-canvas-rightcolumn + #xo-page {
+	margin-right:	0px;
+	margin-left:	176px;
+}
+#xo-canvas-leftcolumn + #xo-canvas-rightcolumn + #xo-page {
+	margin-left:	176px;
+	margin-right:	176px;
+}
+
 
