--- a/XoopsCore/branches/2.3.x/2.3-main/htdocs/themes/default/page-default.css
+++ b/XoopsCore/branches/2.3.x/2.3-main/htdocs/themes/default/page-default.css
@@ -72,11 +72,11 @@ html, body {
 	min-height:		300px;
 }
 
-#xo-canvas-leftcolumn + #xo-page, #xo-canvas-leftcolumn + * + #xo-page {
+#xo-canvas.xo-with_left #xo-page, #xo-canvas.xo-with_both #xo-page {
 	margin-left:	176px;
 }
 
-#xo-canvas-rightcolumn + #xo-page {
+#xo-canvas.xo-with_right #xo-page, #xo-canvas.xo-with_both #xo-page {
 	margin-right:	176px;
 }
 
