Changed the CSS naming (I guess it's better like that)

--- a/XoopsCore/branches/2.3.x/2.3-main/htdocs/themes/default/style-default.css
+++ b/XoopsCore/branches/2.3.x/2.3-main/htdocs/themes/default/style-default.css
@@ -1,6 +1,6 @@
 
-@import url(style-blocks.css);
-@import url(style-elements.css);
+@import url(blocks.css);
+@import url(elements.css);
 
 
 html, body {
