Compliance fix in the blocks stylesheet (there was an invalid font rule)

--- a/XoopsCore/branches/tasks/123218-arch-cleanup/htdocs/themes/default/blocks.css
+++ b/XoopsCore/branches/tasks/123218-arch-cleanup/htdocs/themes/default/blocks.css
@@ -10,7 +10,7 @@
 	display:			block;
 	padding:			1px .3em;
 	text-decoration:	none;
-	font:				80%;
+	font-size:			90%;
 	color:				#CCCCCC;
 }
 .xo-canvas-column a:hover {
