Sending phppp's changes for 2.2.4

--- a/XoopsCore/branches/2.2.x/2.2-main/html/modules/pm/templates/pm_viewpmsg.html
+++ b/XoopsCore/branches/2.2.x/2.2-main/html/modules/pm/templates/pm_viewpmsg.html
@@ -71,7 +71,7 @@
                     <{/if}>
                 </td>
                 <td valign='middle'>
-                    <a href='readpmsg.php?msg_id=<{$message.msg_id}>start=<{$message.msg_no}>&amp;total_messages=<{$total_messages}>&amp;op=<{$op}>'>
+                    <a href='readpmsg.php?msg_id=<{$message.msg_id}>&amp;start=<{$message.msg_no}>&amp;total_messages=<{$total_messages}>&amp;op=<{$op}>'>
                         <{$message.subject}>
                     </a>
                 </td>
