--- a/XoopsCore/branches/2.2.x/2.2-main/html/modules/system/templates/system_imagemanager2.html
+++ b/XoopsCore/branches/2.2.x/2.2-main/html/modules/system/templates/system_imagemanager2.html
@@ -35,7 +35,7 @@ div#footer {text-align:right; padding: 5px;}
 
   <table cellspacing="0" id="imagenav">
     <tr>
-      <td align="left"><a href="<{$xoops_url}>/imagemanager.php?target=<{$target}>&cat_id=<{$show_cat}>"><{$lang_imgmanager}></a></td>
+      <td align="left"><a href="<{$xoops_url}>/imagemanager.php?target=<{$target}>&amp;cat_id=<{$show_cat}>"><{$lang_imgmanager}></a></td>
     </tr>
   </table>
 
