--- a/XoopsCore/branches/2.2.x/2.2-main/html/modules/system/templates/system_userinfo.html
+++ b/XoopsCore/branches/2.2.x/2.2-main/html/modules/system/templates/system_userinfo.html
@@ -26,8 +26,8 @@
 
 <table width="70%" align="center" border="0">
   <tr align="center">
-    <td><input type="button" value="<{$lang_editprofile}>" onclick="location='<{$xoops_url}>/modules/system/admin.php?fct=users&uid=<{$user_uid}>&op=modifyUser'" />
-    <input type="button" value="<{$lang_deleteaccount}>" onclick="location='<{$xoops_url}>/modules/system/admin.php?fct=users&op=delUser&uid=<{$user_uid}>'" />
+    <td><input type="button" value="<{$lang_editprofile}>" onclick="location='<{$xoops_url}>/modules/system/admin.php?fct=users&amp;uid=<{$user_uid}>&amp;op=modifyUser'" />
+    <input type="button" value="<{$lang_deleteaccount}>" onclick="location='<{$xoops_url}>/modules/system/admin.php?fct=users&amp;op=delUser&amp;uid=<{$user_uid}>'" /></td>
   </tr>
 </table>
 
