--- a/XoopsCore/branches/2.2.x/2.2-main/html/themes/xmt/css/style.css
+++ b/XoopsCore/branches/2.2.x/2.2-main/html/themes/xmt/css/style.css
@@ -40,14 +40,14 @@ td#rightcolumn div.blockContent { margin: 0 0 0 10px; }
 
 /* Begin Menus */
 td#mainmenu { margin: 0; }
-td#mainmenu a:before { content: url(images/menubullet.png); }
+td#mainmenu a:before { content: url("../images/menubullet.png"); }
 td#mainmenu a:hover { }
 td#mainmenu a.menuTop { padding-left: 3px; }
 td#mainmenu a.menuMain { padding-left: 3px; }
 td#mainmenu a.menuSub { padding-left: 9px; }
 
 td#usermenu { margin: 0; }
-td#usermenu a:before { content: url(images/menubullet.png); }
+td#usermenu a:before { content: url("../images/menubullet.png"); }
 td#usermenu a:hover { }
 td#usermenu a.menuTop { padding-left: 3px; }
 td#usermenu a.highlight { background: #fcc; }
@@ -72,7 +72,7 @@ acronym, abbr, span.caps { font-size: 0.9em; letter-spacing: .07em; }
 /*Lists */
 html>body ul {list-style: none;text-indent: -12px;}
 ul li:before {content: "\00BB \0020";}
-ul {margin-top: 0;margin-left: 0;padding-left: 12px;} 
+ul {margin-top: 0;margin-left: 0;padding-left: 12px;}
 li {margin: 7px 0 8px 10px;}
 
 /* System Messages */
@@ -81,7 +81,7 @@ div.errorMsg {border-top: 1px solid #ddf;border-left: 10px solid #48b;border-rig
 div.confirmMsg {border-top: 1px solid #ddf;border-left: 10px solid #48b;border-right: 1px solid #aaa;border-bottom: 1px solid #aaa;padding: 10px;width: 75%;color: #136C99;background: #ddffdf;font-weight: bold;text-align: center;}
 
 div.resultMsg {border-top: 1px solid silver;border-left: 10px solid #48b;border-right: 1px solid #666;border-bottom: 1px solid #666;padding: 10px;width: 75%;color: #333;background: #f9f9f9;font-weight: bold;text-align: center;}
-	
+
 /* Posts */
 div.xoopsCode {border: 1px inset #000;padding: 6px;background: #e7e7e7;font-family: "Courier New",Courier,monospace; overflow: auto;}
 div.xoopsQuote { font-style: italic;  overflow: auto;}
