--- a/XoopsCore/branches/tasks/123542-admin/htdocs/themes/default/blocks.css
+++ b/XoopsCore/branches/tasks/123542-admin/htdocs/themes/default/blocks.css
@@ -1,40 +1,30 @@
 
-/* --------- Rules for canvas blocks --------- */
-.xo-canvas-column ul {
-	margin:				0px;
-	padding:			0px;
-	list-style-type:	none;
+/* --------- Left column blocks --------- */
+#xo-canvas-leftcolumn .xo-block {
+	border:			1px solid #666666;
 }
-
-.xo-canvas-column a {
-	display:			block;
-	padding:			1px .3em;
-	text-decoration:	none;
-	font-size:			90%;
-	color:				#CCCCCC;
-}
-.xo-canvas-column a:hover {
-	color:				#FFFFFF;
-}
-.xo-canvas-column .menuSub a {
-	padding-left:		1em;
-}
-
-
-
 #xo-canvas-leftcolumn .xo-blocktitle {
-	background:		url(img/canvas-blocktitle_bg_grey.png) repeat-x left top;
+	background:		#9D9D9D url(img/canvas-blocktitle_bg_grey.png) repeat-x left top;
 	color:			#ffffff;
 	border-bottom:	1px solid #666666;
 	padding:		.2em .5em;
 	font-weight:	bold;
 	text-shadow:	1px 1px #000000;
 }
-
 #xo-canvas-leftcolumn .xo-blockcontent {
 	background:		#999999 url(img/canvas-blockcontent_bg_grey.png) repeat-x left top;
 }
 
+#xo-canvas-leftcolumn a {
+	color:				#CCCCCC;
+	text-decoration:	none;
+	font-size:			90%;
+}
+#xo-canvas-leftcolumn a:hover {
+	color:				#EEEEEE;
+}
+
+/* --------- Right column blocks --------- */
 #xo-canvas-rightcolumn .xo-block {
 	padding:		8px 0px;
 	background:		url(img/separator.png) no-repeat center bottom;
@@ -42,7 +32,6 @@
 #xo-canvas-rightcolumn :last-child {
 	background:		transparent none;
 }
-
 #xo-canvas-rightcolumn .xo-blocktitle {
 	font-weight:	bold;
 }
@@ -50,18 +39,52 @@
 	font-size:		90%;
 }
 
-#xo-canvas-leftcolumn a:hover {
-	color:				#EEEEEE;
-	background:			#555555;
-}
-
 #xo-canvas-rightcolumn a {
 	color:				#666666;
+	text-decoration:	none;
 }
 #xo-canvas-rightcolumn a:hover {
 	color:				#333333;
 	text-decoration:	underline;
 }
+
+
+
+.xo-canvas-column ul {
+	margin:				0px;
+	padding:			.2em;
+}
+.xo-canvas-column li {
+	list-style:		none;
+	margin:			0px;
+	padding:		0px;
+}
+
+
+
+/*
+
+
+
+
+.xo-canvas-column a {
+	display:			inline-block;
+	width:				100%;
+	margin:				0px;
+	padding:			1px .3em;
+	text-decoration:	none;
+	font-size:			90%;
+	color:				#CCCCCC;
+}
+.xo-canvas-column a:hover {
+}
+.xo-canvas-column .menuSub a {
+	padding-left:		1em;
+}
+
+*/
+
+
 
 /* --------- Rules for page blocks --------- */
 
@@ -103,7 +126,7 @@
 
 
 #xo-canvas-leftcolumn .system-main_menu .xo-blocktitle {
-	background:		url(img/canvas-blocktitle_bg_blue.png) repeat-x left top;
+	background:		#647FD7 url(img/canvas-blocktitle_bg_blue.png) repeat-x left top;
 }
 
 #xo-canvas-leftcolumn .system-main_menu .xo-blockcontent {
